index.css
.screen {
    position: absolute;
    top: -85%;
    left: 10%;
    right: 10%;
    height: calc(85% - 60px);
    transition: all 1.5s ease-out;
    -webkit-box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19) !important;
    -moz-box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19) !important;
    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19) !important;
}
.text {    
    color: rgb(17, 90, 14);
    font-family: 'Courier New', Courier, monospace;
    font-size: 34px;
    margin-bottom: 14px;
}
#screencontent {
    position: absolute;
    top: 30px;
    left: 10px;
    right: 10px;
    bottom: 30px;
    background-color: rgba(255, 255, 255, 0.35);
    display: none;
    margin: 3px;
    padding: 20px;
    pointer-events: auto;
    -webkit-touch-callout: none;
    -webkit-user-select: none; 
    -khtml-user-select: none; 
    -moz-user-select: none; 
    -ms-user-select: none; 
    user-select: none;
}
.github {
    flex: 1;
    max-height: 100px;
    cursor: pointer;
    align-self: center;
    justify-self: center;
}
.center{
    display: flex;
    width: 100%;
    align-items: center;
}
#sTop {
    top: 0;
    width: 100%;
    height: 30px;
    background-color: black;
    position: absolute;
}
#sLeft {
    left: 0;
    width: 10px;
    height: 100%;
    background-color: black;
    position: absolute;
}
#sBottom {
    bottom: 0;
    width: 100%;
    height: 30px;
    background-color: black;
    position: absolute;
}
#sRight {
    right: 0;
    height: 100%;
    width: 10px;
    background-color: black;
    position: absolute;
}

.screendown {
    top: 0;
}
#screendarkness {
    position: absolute;
    background-color: #22222282;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: none;
}
#innerscreen {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ffffff;
}

#canvas {
    position: relative;
    overflow: hidden;
}

body {
    margin: 0;
    max-width: fit-content;
}

#container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    display: flex;
    justify-content: center;
}

#darkness {
    background-color: rgba(17, 16, 16, 0.9);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: none;
}

.buttondark {
    -webkit-box-shadow: 0px 0px 9px 7px rgba(255, 255, 255, 0.215);
    -moz-box-shadow: 0px 0px 9px 7px rgba(255, 255, 255, 0.215);
    box-shadow: 0px 0px 9px 7px rgba(255, 255, 255, 0.215);
}

.button {
    position: absolute;
    bottom: 15%;
    background-color: #222722;
    border-color: white;
    border-style: solid;
    border-width: 1px;
    text-align: center;
    width: 80px;
    height: 80px;
    border-radius: 100%;
    display: inline-flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 35px;
    color: white;
    font-weight: bold;
    text-decoration: none;
    pointer-events: auto;
    cursor: pointer;
    box-shadow: 0px 0px 9px 7px rgba(0,0,0,0.1);
    -webkit-box-shadow: 0px 0px 9px 7px rgba(0,0,0,0.1);
    -moz-box-shadow: 0px 0px 9px 7px rgba(0,0,0,0.1); 
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
    -webkit-tap-highlight-color: transparent;
}

